Bug 1090183 - WebSockets should work in SharedWorkers, r=smaug